Revision under work.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -57,7 +57,7 @@
 \begin{abstract}
 Perfect prognosis statistical downscaling relies on the statistical relationships established using observational data for predictands and predictors. Predictors are often retrieved from reanalyses, which are considered pseudo-observations. The impact of the choice of a reanalysis dataset on the performance of the downscaling method is usually overlooked, as global reanalyses are frequently assumed to be equivalent for the last few decades and data-rich regions such as Europe. However, it was recently shown that the reanalysis dataset can have a bigger impact on the method skill than the choice of predictor variables. Generally, reanalyses processed by more recent atmospheric models assimilate more data and perform best.
 
-This work is aimed at assessing the extent of potential gains from the use of ERA5, following its release, compared to other global reanalyses. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict daily precipitation at 301 stations across Switzerland. ERA5 proved to be one of the best performing reanalyses across the different analog methods. Due to data availability, we recommend using 20CR-2c for applications starting between 1851 and 1900, CERA-20C for those between 1900 and 1950, and ERA5 for applications after 1950.
+This work is aimed at assessing the extent of potential gains from the use of ERA5, following its release, compared to other global reanalyses. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict daily precipitation at 301 stations across Switzerland. ERA5 proved to be one of the best performing reanalyses across the different analog methods. Due to data availability, we recommend using 20CR for applications starting between 1851 and 1900, CERA-20C for those between 1900 and 1950, and ERA5 for applications after 1950.
 
 However, ERA5 high spatial resolution (0.25\degree) turned out to be a trap for simple calibration techniques. The domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local solutions. An enhanced calibration procedure, thus, must be used. Besides the risk of poorly-calibrated domains, the high resolution also requires much higher computational time with no gain in skill, provided that the predictors considered are relevant at a synoptic scale. Although ERA5 should be the dataset of choice, its use at a lower resolution to predict daily precipitation should provide equivalent performance.
 
@@ -77,15 +77,17 @@ Applications of AMs consist of, for example, daily precipitation predictions, ei
 
 AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the statistical relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. Globally, two main types of reanalysis products exist: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and hence assimilate surface data only, and those that aim for accuracy over a more recent period (typically 1979) and therefore assimilate as many observations as possible, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, as well as the quantity and quality of the assimilated observations \citep{Dee2011a}.
 
-The nature of the application can drive the choice of a reanalysis dataset for AMs. For example, if a coverage of the 20th century is needed, the Twentieth Century Reanalysis produced by the European Centre for Medium-Range Weather Forecasts (ECMWF) \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the one \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In an operational forecasting context, with the target situation being provided by an NWP model, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce inter-model biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider.  
+The nature of the application can drive the choice of a reanalysis dataset for AMs. For example, if a coverage of the 20th century is needed, the Twentieth Century Reanalysis produced by the European Centre for Medium-Range Weather Forecasts (ECMWF) \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or 20CR \citep{Compo2011} produced by NOAA -- now available as version 3 \citep{Slivinski2019, Slivinski2021} -- can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In an operational forecasting context, with the target situation being provided by an NWP model, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce inter-model biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider.  
 
-NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many AM applications \citep[e.g.][]{Timbal2003, Altava-Ortiz2006, Matulla2007, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep[e.g.][] {Willems2011b, Radanovics2013, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-data-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, have not been used in AMs to the author’s knowledge. Newer products, such as NCEP's Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a}, MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017} or ERA5 \citep{Hersbach2019} have not been used much in AMs. This is the result of the lag one often observes between the release of a new reanalysis dataset and its adoption in AMs.
+NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many AM applications \citep[e.g.][]{Timbal2003, Altava-Ortiz2006, Matulla2007, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep[e.g.][] {Willems2011b, Radanovics2013, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-data-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, have not been used in AMs to the author’s knowledge. Newer products, such as NCEP's Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a}, MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017} or ERA5 \citep{Hersbach2020} have not been used much in AMs. This is the result of the lag one often observes between the release of a new reanalysis dataset and its adoption in AMs.
 
 Most AM applications are based on a single reanalysis dataset and its impact is overlooked. \citet{BenDaoud2009} compared NR-1 with ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT, and 20CR, and found that the choice of the reanalysis dataset has a non-negligible impact on the performance of AMs. This impact can even be greater than that of the choice of the predictor variables. It was concluded that the role of the reanalyses should not be underestimated. Such influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM is significant. Similarly to the work of \citet{Dayon2015}, the impact of the reanalysis was sometimes found to be higher than that of the selected predictors. 
 
 Generally, more recent products that assimilate more data and come with a higher spatial resolution result in better predictions in AMs \citep{Horton2018b}. However, this is not systematically the case as, for example, JRA-55, which has a lower spatial resolution (1.25\degree), was found to be one of the best options for more complex AMs. Moreover, the choice of a reanalysis can be driven by the period of interest. As there was no better dataset overall, a table has been provided by \citet{Horton2018b} for guidance in the selection of a reanalysis for a given predictor and period. Some characteristics of the datasets were also assessed, such as the spatial resolution, archive length, and use of ensemble members. For most AMs and datasets, there was a gain in skill with increasing resolution up to 1\degree; below this, however, the gains were almost null. The use of long archives for reanalyses with extended data improved the performance to some extent by providing potentially better analog situations, particularly for less frequent situations. However, former times were more data-scarce and data might be inhomogeneous over long periods which can, in turn, have a negative effect on the skill of AMs exploiting these archives \citep{Horton2018b}. Finally, the use of ensemble members showed limited benefits and that great caution is required for their use in methods with multiple levels of analogy.
 
 This work is a follow-up to \citet{Horton2018b} and focuses on ERA5 by comparing its impact on six AMs using nine other major reanalyses at 301 stations in Switzerland. The study of the characteristics of the reanalyses as provided in \citet{Horton2018b} is not repeated here as the conclusions are likely identical. The optimal parameters, such as the number of analogs and the size of the comparison domain, were here compared across reanalyses and discussed. This provides an original insight into the role of the spatial resolution and reanalysis quality. The benefits and potential pitfalls of ERA5’s high spatial resolution are also assessed.
+
+The article is structured as follows: Sect. \ref{sec:data_methods} describes the reanalyses compared in this work, provides some information on the precipitation dataset used and the study period, details the assessed AMs and their calibration. Sect. \ref{sec:results} shows the results. It starts with an analysis of the role of the spatial resolution and the related pitfalls for the calibration procedure (Sect. \ref{sec:results_hires}). A comparison of the AM parameters calibrated for the different reanalyses is then provided (Sect. \ref{sec:results_parameters}). Finally, it shows how ERA5 compares to the other reanalyses (Sect. \ref{sec:results_skill}). The conclusions are provided in Sect. \ref{sec:conclusion}.
 
 
 \section{Data and methods}
@@ -94,11 +96,11 @@ This work is a follow-up to \citet{Horton2018b} and focuses on ERA5 by comparing
 \subsection{Reanalyses}
 \label{sec:reanalyses}
 
-The present work aims at comparing ERA5 \citep{Hersbach2019} with other global reanalyses, whose characteristics are provided in Table \ref{table:datasets}, thus complementing the work of \citet{Horton2018b}. The first three reanalyses in Table \ref{table:datasets} are surface-input \citep{Fujiwara2017} products that assimilate surface data only but cover an extended period, typically from the start of 20th century. NOAA produced the Twentieth Century Reanalysis \citep[version 2c, 20CR-2c --][]{Compo2011}, which only assimilates surface pressure data and uses observed monthly sea-surface temperatures and sea-ice distributions as boundary conditions. The ECMWF developed two products using surface input only. The first is ERA-20C \citep{Poli2016}, which assimilates marine wind observations and is forced by sea surface temperature, sea ice cover, atmospheric composition changes, and solar forcing. The second is CERA-20C \citep{Laloyaux2018a}, which has an additional coupling to the ocean and was produced by a more recent version of the Integrating Forecasting System (IFS) model.
+The present work aims at comparing ERA5 \citep{Hersbach2020} with other global reanalyses, whose characteristics are provided in Table \ref{table:datasets}, thus complementing the work of \citet{Horton2018b}. The first three reanalyses in Table \ref{table:datasets} are surface-input \citep{Fujiwara2017} products that assimilate surface data only but cover an extended period, typically from the start of 20th century. NOAA produced the Twentieth Century Reanalysis \citep[version 2c, 20CR-2c --][]{Compo2011}, which only assimilates surface pressure data and uses observed monthly sea-surface temperatures and sea-ice distributions as boundary conditions. A more recent version, 20CRv3 \citep{Slivinski2019, Slivinski2021}, has been released since the comparison presented here was performed (and is thus not part of this work). This third version solves issues found in version 2c and was produced using an upgraded data assimilation system as well as a newer forecast model. The ECMWF developed two products using surface input only. The first is ERA-20C \citep{Poli2016}, which assimilates marine wind observations and is forced by sea surface temperature, sea ice cover, atmospheric composition changes, and solar forcing. The second is CERA-20C \citep{Laloyaux2018a}, which has an additional coupling to the ocean and was produced by a more recent version of the Integrated Forecasting System (IFS) model.
 
 The other reanalyses are full-input products that assimilate all available data, including satellite data \citep{Fujiwara2017}. NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} was the first global reanalysis followed by NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002}, which fixed some identified problems. The Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} is the most recent one produced by the NCEP. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} is produced by the Japan Meteorological Agency (JMA). JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, which uses conventional data only, was not considered in this work as it provides similar results to JRA-55 \citep{Horton2018b}. NASA's Global Modeling and Assimilation Office (GMAO) released the Modern-Era Retrospective Analysis for Research and Applications version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, which is an improvement on the first MERRA reanalysis \citep{Rienecker2011}. Finally, the predecessor of ERA5, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, was also considered.
 
-ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from multiple improvements to IFS in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs with higher temporal (hourly) and spatial (0.25\degree) resolutions. It has the highest spatial and temporal resolution till date. The use of a 10-member ensemble of data assimilation at a lower spatial and temporal resolution allows an estimation of its uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as data from ground-based radar and new satellite sensors, and uses improved observation operators, thus allowing better comparison of model outputs with observations. Additionally, it indirectly benefits from improvements in historical observations of both conventional and satellite data \citep{Hersbach2019}. ERA5 provides, among others, more consistent sea surface temperature and sea ice concentration, an improved representation of tropical cyclones, a better balance of evaporation and precipitation, and improved soil moisture. ERA5 is also more suitable for climate analyses as it relies on appropriate radiative forcing and boundary conditions (e.g., changes in greenhouse gases, aerosols, SST, and sea ice).
+ERA5 \citep{Hersbach2020} is meant to replace ERA-Interim. It benefits from multiple improvements to IFS in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2020}. It provides more outputs with higher temporal (hourly) and spatial (0.25\degree) resolutions. It has the highest spatial and temporal resolution to date. The use of a 10-member ensemble of data assimilation at a lower spatial and temporal resolution allows an estimation of its uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as data from ground-based radar and new satellite sensors, and uses improved observation operators, thus allowing better comparison of model outputs with observations. Additionally, it indirectly benefits from improvements in historical observations of both conventional and satellite data \citep{Hersbach2020}. ERA5 provides, among others, more consistent sea surface temperature and sea ice concentration, an improved representation of tropical cyclones, a better balance of evaporation and precipitation, and improved soil moisture. ERA5 is also more suitable for climate analyses as it relies on appropriate radiative forcing and boundary conditions (e.g., changes in greenhouse gases, aerosols, SST, and sea ice).
 
 
 \begin{table}[bt]
@@ -234,7 +236,7 @@ The results are provided for the VP (independent validation period, Sect. \ref{s
 
 Although the calibrations were performed on an HPC cluster, using the classic calibration ended up being highly time-consuming for ERA5 (Sect. \ref{sec:calibration}). The reason is that the process involves calculating a relevance map for each level of analogy, which requires assessments of every unitary cell of the predictor grid and the successive extensions of the spatial window in all four directions. On a high-resolution grid, these procedures imply numerous assessments.
 
-The first results of the classic calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An analysis of the resulting parameters revealed that the spatial windows for Z were significantly smaller for ERA5 as compared to the other reanalyses. For example, for 2Z, the mean zonal and meridional extents of the spatial windows were less than half of those for ERA-INT. In general, while using ERA5, the spatial windows for Z were very small whereas the number of analogs was higher than that for ERA-INT. The reason for such non-optimal parameters is due to the classic calibration being stuck in local solutions during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue, which was caused by the high resolution of ERA5, did not occur in a significant way for the other reanalyses. High resolution generates a noisier response surface in terms of skill, with local solutions that can trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including simultaneous increments in multiple grid points to get out of local solutions. The classic+ calibration also ended up being faster as it does not assess every grid point when calculating the relevance map. Global optimization techniques, such as genetic algorithms \citep{Horton2017a}, would have overcome this issue more efficiently. However, carrying out this comparison with genetic algorithms would have been computationally intensive and too time-consuming. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
+The first results of the classic calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An analysis of the resulting parameters revealed that the spatial windows for Z were significantly smaller for ERA5 as compared to the other reanalyses. For example, for 2Z, the mean zonal and meridional extents of the spatial windows were less than half of those for ERA-INT. In general, while using ERA5, the spatial windows for Z were very small whereas the number of analogs was higher than that for ERA-INT. The reason for such non-optimal parameters is due to the classic calibration being stuck in local solutions during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue, which was caused by the high resolution of ERA5, did not occur in a significant way for the other reanalyses. High resolution generates a noisier response surface in terms of skill, with local solutions that can trap the classic calibration. The problem here is not the lack of fidelity of the high-resolution input, but limitations of the calibration procedure. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including simultaneous increments in multiple grid points to get out of local solutions. The classic+ calibration also ended up being faster as it does not assess every grid point when calculating the relevance map. This approach still uses the full resolution of ERA5, but improves the calibration of the spatial windows. Global optimization techniques, such as genetic algorithms \citep{Horton2017a}, would have overcome this issue more efficiently. However, carrying out this comparison with genetic algorithms would have been computationally intensive and too time-consuming. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
 
 \citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses generally has no significant impact on the performance of AMs. It is because, for example, the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \citep{Thiebaux1985} and thus, the high resolution does not bring new information. It might, however, be different for moisture variables. ERA5 has the highest spatial resolution (0.25\degree) among global reanalyses. An additional calibration was performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution to the gain in skill. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to the levels of ERA-INT (named ERA5 0.75 in Fig. \ref{fig:resolution}) did not significantly impact the score. Although a higher model resolution is likely to have contributed to the improvements of ERA5 as compared to ERA-INT, the high output resolution has no significant impact on the AMs’ performance for the prediction of daily precipitation. We expected to see some gains for moisture variables, but they did not materialize. The gains relative to ERA-INT are thus likely due to improvements in the forecast model, assimilation scheme, and assimilated data. While this conclusion is likely valid for predictands principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors such as lightning activity, the output spatial resolution does matter (unpublished results).
 
@@ -284,7 +286,7 @@ The spatial windows were shown to vary substantially among reanalyses. Spatial w
 
 \citet{Horton2018b} showed that using reanalyses at a spatial resolution inferior to  1\degree\ did not significantly improve the performance score. ERA5 was here used at its original resolution as well as that of ERA-INT (0.75\degree). The reduction in spatial resolution did not impact the performance of AMs for daily precipitation, which is mainly driven by synoptic-scale processes. This conclusion was shown to be not valid for predictands driven by mesoscale drivers such as the lightning activity. It also implies that the output resolution does not explain the gains in skill compared to ERA-INT, which are likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data.
 
-To conclude, ERA5 is recommended for the prediction of daily precipitation with AMs in Europe. It should ideally be used along with other reanalyses in a multi-model approach. ERA5 was shown to be systematically among the best options for each AM and thus, there is no need for a predictor-conditioned selection as in \citet{Horton2018b}. We recommend using 20CR-2c for applications starting between 1851 and 1900, CERA-20C for those between 1900 and 1950, and ERA5 for applications after 1950. However, for predictands primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
+To conclude, ERA5 is recommended for the prediction of daily precipitation with AMs in Europe. It should ideally be used along with other reanalyses in a multi-model approach. ERA5 was shown to be systematically among the best options for each AM and thus, there is no need for a predictor-conditioned selection as in \citet{Horton2018b}. We recommend using 20CR for applications starting between 1851 and 1900, CERA-20C for those between 1900 and 1950, and ERA5 for applications after 1950. However, for predictands primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
 
 
 
