--- a/references.bib
+++ b/references.bib
@@ -209,15 +209,6 @@
 	volume = {137},
 	year = {2011}
 }
-@article{Hersbach2019,
-    author = {Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hor{\'{a}}nyi, Andr{\'{a}}s and Sabater, Joaqu{\'{i}}n Mu{\~{n}}oz and Nicolas, Julien and Radu, Raluca and Schepers, Dinand and Simmons, Adrian and Soci, Cornel and Dee, Dick},
-    doi = {10.21957/vf291hehd7},
-    journal = {ECMWF Newsletter},
-    number = {159},
-    pages = {17--24},
-    title = {{Global reanalysis: goodbye ERA-Interim, hello ERA5}},
-    year = {2019}
-}
 @article{Lorenz1969,
 	author = {Lorenz, EN},
 	doi = {10.1175/1520-0469(1969)26<636:aparbn>2.0.co;2},
@@ -1016,4 +1007,36 @@
 	volume = {141},
 	year = {2012}
 }
-
+@article{Slivinski2019,
+    author = {Slivinski, Laura C. and Compo, Gilbert P. and Whitaker, Jeffrey S. and Sardeshmukh, Prashant D. and Giese, Benjamin S. and McColl, Chesley and Allan, Rob and Yin, Xungang and Vose, Russell and Titchner, Holly and Kennedy, John and Spencer, Lawrence J. and Ashcroft, Linden and Br{\"{o}}nnimann, Stefan and Brunet, Manola and Camuffo, Dario and Cornes, Richard and Cram, Thomas A. and Crouthamel, Richard and Dom{\'{i}}nguez-Castro, Fernando and Freeman, J. Eric and Gergis, Jo{\"{e}}lle and Hawkins, Ed and Jones, Philip D. and Jourdain, Sylvie and Kaplan, Alexey and Kubota, Hisayuki and Blancq, Frank Le and Lee, Tsz Cheung and Lorrey, Andrew and Luterbacher, J{\"{u}}rg and Maugeri, Maurizio and Mock, Cary J. and Moore, G. W.Kent and Przybylak, Rajmund and Pudmenzky, Christa and Reason, Chris and Slonosky, Victoria C. and Smith, Catherine A. and Tinz, Birger and Trewin, Blair and Valente, Maria Ant{\'{o}}nia and Wang, Xiaolan L. and Wilkinson, Clive and Wood, Kevin and Wyszy{\'{n}}ski, Przemys{\l}aw},
+    doi = {10.1002/qj.3598},
+    issn = {1477870X},
+    journal = {Quarterly Journal of the Royal Meteorological Society},
+    number = {724},
+    pages = {2876--2908},
+    title = {{Towards a more reliable historical reanalysis: Improvements for version 3 of the Twentieth Century Reanalysis system}},
+    volume = {145},
+    year = {2019}
+}
+@article{Slivinski2021,
+    author = {Slivinski, L. C. and Compo, G. P. and Sardeshmukh, P. D. and Whitaker, J. S. and McColl, C. and Allan, R. J. and Brohan, P. and Yin, X. and Smith, C. A. and Spencer, L. J. and Vose, R. S. and Rohrer, M. and Conroy, R. P. and Schuster, D. C. and Kennedy, J. J. and Ashcroft, L. and Br{\"{o}}nnimann, S. and Brunet, M. and Camuffo, D. and Cornes, R. and Cram, T. A. and Dom{\'{i}}nguez-Castro, F. and Freeman, J. E. and Gergis, J. and Hawkins, E. and Jones, P. D. and Kubota, H. and Lee, T. C. and Lorrey, A. M. and Luterbacher, J. and Mock, C. J. and Przybylak, R. K. and Pudmenzky, C. and Slonosky, V. C. and Tinz, B. and Trewin, B. and Wang, X. L. and Wilkinson, C. and Wood, K. and Wyszynski, P.},
+    doi = {10.1175/JCLI-D-20-0505.1},
+    issn = {08948755},
+    journal = {Journal of Climate},
+    number = {4},
+    pages = {1417--1438},
+    title = {{An evaluation of the performance of the twentieth century reanalysis version 3}},
+    volume = {34},
+    year = {2021}
+}
+@article{Hersbach2020,
+    author = {Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hirahara, Shoji and Hor{\'{a}}nyi, Andr{\'{a}}s and Mu{\~{n}}oz-Sabater, Joaqu{\'{i}}n and Nicolas, Julien and Peubey, Carole and Radu, Raluca and Schepers, Dinand and Simmons, Adrian and Soci, Cornel and Abdalla, Saleh and Abellan, Xavier and Balsamo, Gianpaolo and Bechtold, Peter and Biavati, Gionata and Bidlot, Jean and Bonavita, Massimo and {De Chiara}, Giovanna and Dahlgren, Per and Dee, Dick and Diamantakis, Michail and Dragani, Rossana and Flemming, Johannes and Forbes, Richard and Fuentes, Manuel and Geer, Alan and Haimberger, Leo and Healy, Sean and Hogan, Robin J. and H{\'{o}}lm, El{\'{i}}as and Janiskov{\'{a}}, Marta and Keeley, Sarah and Laloyaux, Patrick and Lopez, Philippe and Lupu, Cristina and Radnoti, Gabor and de Rosnay, Patricia and Rozum, Iryna and Vamborg, Freja and Villaume, Sebastien and Th{\'{e}}paut, Jean No{\"{e}}l},
+    doi = {10.1002/qj.3803},
+    issn = {1477870X},
+    journal = {Quarterly Journal of the Royal Meteorological Society},
+    number = {730},
+    pages = {1999--2049},
+    title = {{The ERA5 global reanalysis}},
+    volume = {146},
+    year = {2020}
+}
