--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -75,7 +75,7 @@ Analog methods (AMs) are statistical downscaling techniques that predict local m
 
 Applications of AMs consist of, for example, daily precipitation predictions, either in an operational forecasting context \citep[e.g.][]{Bontron2005, Hamill2006, Bliefernicht2010, Marty2012, Horton2012, Hamill2015, BenDaoud2016} or for downscaling climate models \citep[e.g.][]{Zorita1999, Wetterhall2005, Wetterhall2007, Matulla2007, Radanovics2013, Chardon2014, Dayon2015, Raynaud2016b}. Other applications target precipitation radar images \citep{Panziera2011, Foresti2015a}, temperature \citep{Kruizinga1983, DelleMonache2013, Caillouet2016, Raynaud2016b}, wind \citep{DelleMonache2013, DelleMonache2011, Vanvyve2015, Alessandrini2015, Junk2015, Junk2015c}, solar radiation or power production \citep{Alessandrini2015a, Bessa2015, Raynaud2016b}, and the trajectory of tropical cyclones \citep{Sievers2000, Fraedrich2003}. AMs are also used for seasonal forecast \citep{Xavier2007, Charles2012, Wu2012, Shao2013}.
 
-AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the statistical relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. Globally, two main types of reanalysis products exist: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and hence assimilate surface data only, and those that aim for accuracy over a more recent period (typically 1979) and therefore assimilate as many observations as possible, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, as well as the quantity and quality of the assimilated observations \citep{Dee2011a}.
+AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the statistical relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. Once the relationship has been established (i.e., the predictor variables selected and the other parameters calibrated), the AM is then applied in a different context, such as forecasting, climate reconstruction, or climate projections. In such contexts, precipitation is predicted using the target model output to describe the target situation for the AM and the reanalysis dataset as the archive to retrieve past analog situations (if no long reforecast dataset is available). Globally, two main types of reanalysis products exist: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and hence assimilate surface data only, and those that aim for accuracy over a more recent period (typically 1979) and therefore assimilate as many observations as possible, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, as well as the quantity and quality of the assimilated observations \citep{Dee2011a}.
 
 The nature of the application can drive the choice of a reanalysis dataset for AMs. For example, if a coverage of the 20th century is needed, the Twentieth Century Reanalysis produced by the European Centre for Medium-Range Weather Forecasts (ECMWF) \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or 20CR \citep{Compo2011} produced by NOAA -- now available as version 3 \citep{Slivinski2019, Slivinski2021} -- can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In an operational forecasting context, with the target situation being provided by an NWP model, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce inter-model biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider.  
 
