Updating figure order.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -340,49 +340,49 @@ The author has declared no conflict of interest.
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=100mm]{figure-4.pdf}
+	\includegraphics[width=100mm]{figure-2.pdf}
 	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; named "ERA5 0.25 issues"; see explanation in text). The performance is given by the CRPSS for all stations and all AMs on the VP. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
 	\label{fig:resolution}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-	\includegraphics[width=115mm]{figure-6.pdf}
+	\includegraphics[width=115mm]{figure-3.pdf}
 	\caption{Calibrated number of analogs for the different methods and reanalyses, and for all stations. The reanalyses are ordered by increasing spatial resolution. The triangles represent the mean values of all stations.}
 	\label{fig:params-nb-analogs}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-	\includegraphics[width=115mm]{figure-7.pdf}
+	\includegraphics[width=115mm]{figure-4.pdf}
 	\caption{Calibrated zonal extents (in degrees) of the spatial windows for the different methods and reanalyses, and for all stations. Same conventions as Fig. \protect\ref{fig:params-nb-analogs}.}
 	\label{fig:params-xwidth}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-	\includegraphics[width=115mm]{figure-8.pdf}
+	\includegraphics[width=115mm]{figure-5.pdf}
 	\caption{Calibrated meridional extents (in degrees) of the spatial windows for the different methods and reanalyses, and for all stations. Same conventions as Fig. \protect\ref{fig:params-nb-analogs}.}
 	\label{fig:params-ywidth}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=\textwidth]{figure-2.pdf}
+	\includegraphics[width=\textwidth]{figure-6.pdf}
 	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, dataset, and method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
 	\label{fig:comparison_values}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=\textwidth]{figure-3.pdf}
-	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
+	\includegraphics[width=\textwidth]{figure-7.pdf}
+	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. \protect\ref{fig:comparison_values}.}
 	\label{fig:comparison_relative}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=120mm]{figure-5.pdf}
+	\includegraphics[width=120mm]{figure-8.pdf}
 	\caption{Percentage of identical analog dates for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
 	\label{fig:shared-dates}
 \end{figure}
